--- a/Jogos/Jogodamemoria/game01.html
+++ b/Jogos/Jogodamemoria/game01.html
@@ -11,11 +11,12 @@
 
 </head>
 <body>
-    <h3>Score: <span id="result"></span> </h3>
+    <h3>Score: <span id="result">0</span> </h3>
 
     <div class="grid">
         
     </div>
+    <h3 class="msg"></h3>
 
 
     
