--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <h1>Jogos</h1>
 
     <div><a href="/Jogos/Jogodamemoria/game01.html">Jogo da Memória</a></div>
+    <div><a href="/Jogos/AprendendoaCriarJogo/game02.html">Aprendendo a criar jogos</a></div>
+    
 </body>
 </html>
