Step1 - starting project game

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <div><a href="/Jogos/Jogodamemoria/game01.html">Jogo da Memória</a></div>
     <div><a href="/Jogos/AprendendoaCriarJogo/game02.html">Aprendendo a criar jogos</a></div>
+    <div><a href="/Jogos/Labirinto-game/game03.html">Labirinto Game</a></div>
     
 </body>
 </html>
